# Modular_Model_Suite

./: README.md
live-umlrt/livemodeling/: .cproject  .gitignore  .project  CMakeLists.txt  env.cmake
live-umlrt/livemodeling/src/parser/: CMakeLists.txt  Expr2.backupgrammer  PMEExecRules.g4  PMEExpr.g4  antlr.cmake  test_parser.cpp
live-umlrt/livemodeling/src/pme_core/: CMakeLists.txt  ExecContext.cpp  ExecContext.hpp  ExecHelper.cpp  ExecHelper.hpp  ExecRuleTypes.cpp  ExecRuleTypes.hpp  PMDConfig.hpp  PMDTypes.hpp  PMEExecRulesAnalyzer.cpp  PMEExecRulesAnalyzer.hpp  PMEExecRulesParserVisitor.cpp  PMEExecRulesParserVisitor.hpp  PMEExprParserDescriptiveErrorListener.cpp  PMEExprParserDescriptiveErrorListener.hpp  PMEExprVisitorImp.cpp  PMEExprVisitorImp.hpp  PMEScriptExecutor.cpp  PMEScriptExecutor.hpp  RuleParserDescriptiveErrorListener.cpp  RuleParserDescriptiveErrorListener.hpp
live-umlrt/livemodeling/src/test/: CMakeLists.txt  TestExecRules.cpp  test1.pme
live-umlrt/livemodeling/src/test/performance_test/transfromation/: added_complexity.csv  analysis_time.csv  config.txt  loadin-saving-generation.csv  model_size_calculator.bash  modeling_activities_result.csv  models_size.csv  models_sizeRefined_.csv  overhead_calculator.bash  partial_model_analysis.bash  partial_model_analysis.sh  partial_model_creator.bash  partiality_fixer.bash  query_result.csv  query_to_analyze_result.sql  refinment_and_analysis_time.txt  refinment_overhead.csv  refinment_time.csv  result.txt  result_analysis-2.txt  result_analysis.txt  result_refinement-2.txt  result_refinement.txt  statistical_analysis.R
live-umlrt/livemodeling/src/test/performance_test/transfromation/models/CarMultiDoorLockM/: CarDoorLock.notation  CarDoorLock.uml  Debuggable_CarDoorLock.uml  Partial_10_CarDoorLock.uml  Partial_20_CarDoorLock.uml  Partial_30_CarDoorLock.uml  Partial_40_CarDoorLock.uml  Partial_50_CarDoorLock.uml  Partial_60_CarDoorLock.uml  Partial_70_CarDoorLock.uml  Partial_80_CarDoorLock.uml  Partial_90_CarDoorLock.uml  Refined_CarDoorLock.uml  Refined_Partial_10_CarDoorLock.uml  Refined_Partial_20_CarDoorLock.uml  Refined_Partial_30_CarDoorLock.uml  Refined_Partial_40_CarDoorLock.uml  Refined_Partial_50_CarDoorLock.uml  Refined_Partial_60_CarDoorLock.uml  Refined_Partial_70_CarDoorLock.uml  Refined_Partial_80_CarDoorLock.uml  Refined_Partial_90_CarDoorLock.uml
live-umlrt/livemodeling/src/test/performance_test/transfromation/models/CommGateWay/: model.uml
live-umlrt/livemodeling/src/test/performance_test/transfromation/models/DebuggableReplication/: DebuggableReplication.uml  Partial_10_DebuggableReplication.uml  Partial_20_DebuggableReplication.uml  Partial_30_DebuggableReplication.uml  Partial_40_DebuggableReplication.uml  Partial_50_DebuggableReplication.uml  Partial_60_DebuggableReplication.uml  Partial_70_DebuggableReplication.uml  Partial_80_DebuggableReplication.uml  Partial_90_DebuggableReplication.uml  Refined_DebuggableReplication.uml  Refined_Partial_10_DebuggableReplication.uml  Refined_Partial_20_DebuggableReplication.uml  Refined_Partial_30_DebuggableReplication.uml  Refined_Partial_40_DebuggableReplication.uml  Refined_Partial_50_DebuggableReplication.uml  Refined_Partial_60_DebuggableReplication.uml  Refined_Partial_70_DebuggableReplication.uml  Refined_Partial_80_DebuggableReplication.uml  Refined_Partial_90_DebuggableReplication.uml
live-umlrt/livemodeling/src/test/performance_test/transfromation/models/DigitalWatch/: .project  DigitalWatch.controllers  DigitalWatch.notation  DigitalWatch.uml  Partial_10_DigitalWatch.uml  Partial_20_DigitalWatch.uml  Partial_30_DigitalWatch.uml  Partial_40_DigitalWatch.uml  Partial_50_DigitalWatch.uml  Partial_60_DigitalWatch.uml  Partial_70_DigitalWatch.uml  Partial_80_DigitalWatch.uml  Partial_90_DigitalWatch.uml  Refined_DigitalWatch.uml  Refined_Partial_10_DigitalWatch.uml  Refined_Partial_20_DigitalWatch.uml  Refined_Partial_30_DigitalWatch.uml  Refined_Partial_40_DigitalWatch.uml  Refined_Partial_50_DigitalWatch.uml  Refined_Partial_60_DigitalWatch.uml  Refined_Partial_70_DigitalWatch.uml  Refined_Partial_80_DigitalWatch.uml  Refined_Partial_90_DigitalWatch.uml
live-umlrt/livemodeling/src/test/performance_test/transfromation/models/ParcelRouter/: Partial_10_model.uml  Partial_20_model.uml  Partial_30_model.uml  Partial_40_model.uml  Partial_50_model.uml  Partial_60_model.uml  Partial_70_model.uml  Partial_80_model.uml  Partial_90_model.uml  Refined_Partial_10_model.uml  Refined_Partial_20_model.uml  Refined_Partial_30_model.uml  Refined_Partial_40_model.uml  Refined_Partial_50_model.uml  Refined_Partial_60_model.uml  Refined_Partial_70_model.uml  Refined_Partial_80_model.uml  Refined_Partial_90_model.uml  Refined_model.uml  model.notation  model.uml
live-umlrt/livemodeling/src/test/performance_test/transfromation/models/Refined-Replication/: Partial_40_DigitalWatch.uml,
live-umlrt/livemodeling/src/test/performance_test/transfromation/models/Replication/: Debuggable_Replication.uml  Partial_10_Replication.uml  Partial_20_Replication.uml  Partial_30_Replication.uml  Partial_40_Replication.uml  Partial_50_Replication.uml  Partial_60_Replication.uml  Partial_70_Replication.uml  Partial_80_Replication.uml  Partial_90_Replication.uml  Refined_Partial_10_Replication.uml  Refined_Partial_20_Replication.uml  Refined_Partial_30_Replication.uml  Refined_Partial_40_Replication.uml  Refined_Partial_50_Replication.uml  Refined_Partial_60_Replication.uml  Refined_Partial_70_Replication.uml  Refined_Partial_80_Replication.uml  Refined_Partial_90_Replication.uml  Replication.uml  (+2 more)
live-umlrt/livemodeling/src/test/umlrtmodels/: .project  CMakeLists-modularmodel-backup.txt  CMakeLists.txt
live-umlrt/livemodeling/src/test/umlrtmodels/Counter/: Counter.notation  Counter.uml
live-umlrt/livemodeling/src/util/: CMakeLists.txt  Config.cpp  Config.hpp  DebugCommand.cpp  DebugCommand.hpp  Event.cpp  Event.hpp  Heap.cpp  Heap.hpp  RandomGenerator.cpp  RandomGenerator.hpp  RealTimeLibs.cpp  SharedMem.cpp  SharedMem.hpp  config  logging_config.hpp  prettyprint.hpp
(+177 files in other folders)
